--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -335,3 +335,18 @@ $desktop: 960px + (2 * $gap) !default;
     width: 100%;
   }
 }
+	  
+
+// Grace edit
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+}
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
