--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -339,14 +339,21 @@ $desktop: 960px + (2 * $gap) !default;
 
 // Grace edit
 .video-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
 }
 .video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+	  
+.docs-table {
+  .table-title {
+    background: #f0f4f6;
+    padding: 10px 20px;
+  }
 }
