--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -340,7 +340,12 @@ $desktop: 960px + (2 * $gap) !default;
 // Grace edit
 // Homepage
 .partners-logo {
-  display: flex;	
+  display: flex;
+
+  li img {
+    max-width: 200px;
+    height: auto;
+  }
 }
 
 // Blog posts
