--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -343,6 +343,7 @@ $desktop: 960px + (2 * $gap) !default;
   display: flex;
 
   li img {
+    width: 100%;
     max-width: 200px;
     height: auto;
   }
