--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -345,9 +345,9 @@ $desktop: 960px + (2 * $gap) !default;
   justify-content: space-around;
 
   li img {
-    width: 100%;
-    max-width: 200px;
+    width: auto;
     height: 100%;
+    max-height: 90px;
   }
 }
 
