--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -346,8 +346,8 @@ $desktop: 960px + (2 * $gap) !default;
 
   li img {
     width: 100%;
+    max-width: 180px;
     height: 100%;
-    max-height: 120px;
   }
 }
 
