--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -337,42 +337,47 @@ $desktop: 960px + (2 * $gap) !default;
 }
 	  
 
-// Grace edit
+// GRACE EDIT
 // Homepage
 .partners-logo {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: nowrap;
 
-  li img {
-    width: 100%;
-    max-width: 160px;
-    height: 100%;
-  }
+	@include touch() {
+		flex-wrap: wrap;	
+	}
+
+  	li img {
+    	width: 100%;
+    	max-width: 160px;
+    	height: 100%;
+  	}
 }
 
 // Blog posts
 .video-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-	
-  iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
+	position: relative;
+	padding-bottom: 56.25%;
+	height: 0;
+
+	iframe {
+		position: absolute;
+    		top: 0;
+    		left: 0;
+    		width: 100%;
+    		height: 100%;
+  	}
 }
 
 // API reference
 .docs-table {
-  .table-title {
-    background: #f0f4f6;
-  }
+	.table-title {
+    		background: #f0f4f6;
+  	}
 	
-  td {
-    padding: 1em !important;
-  }
+  	td {
+    		padding: 1em !important;
+  	}
 }
