--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -340,11 +340,12 @@ $desktop: 960px + (2 * $gap) !default;
 // GRACE EDIT
 // Homepage
 .partners-logo {
+	padding: 1rem 0
 	width: 100%;
 	display: flex;
 	justify-content: space-evenly;
 	flex-wrap: wrap;
-	gap: 20px;
+	gap: 1rem 2rem;
 
   	li img {
     	width: 100%;
