--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -347,6 +347,10 @@ $desktop: 960px + (2 * $gap) !default;
 	flex-wrap: wrap;
 	gap: 1rem 2rem;
 
+	li {
+		width: calc(100% / 3);	
+	}
+	
   	li img {
     	width: 100%;
     	max-width: 160px;
