--- a/misc/custom.scss
+++ b/misc/custom.scss
@@ -358,11 +358,7 @@ $desktop: 960px + (2 * $gap) !default;
   	}
 }
 	  
-.homepage-linkout:after {
-	display: none !important;
-}
-	  
-#main-site-logo {
+#mpa-initiative-logo {
 	width: 100%;
 	max-width: 80px;
 	padding: 1rem 0 0;
